feat: updated holidays 2026 and promotions system

--- a/locales/es.json
+++ b/locales/es.json
@@ -16,7 +16,7 @@
         "processing": "Procesando...",
         "argentina": "España",
         "cordoba": "Marbella",
-        "estetica_bienestar": "ESTÉTICA & BIENESTAR",
+        "estetica_bienestar": "Tu belleza, en su forma más natural",
         "staff_access": "acceso staff",
         "admin_panel": "panel de control",
         "weekend_alert": "Lo sentimos, no atendemos los fines de semana. Por favor selecciona un día hábil.",
