Implement mixed payments, split amounts, and date navigation

--- a/locales/es.json
+++ b/locales/es.json
@@ -49,7 +49,7 @@
         "error_phone": "Ingresa un número de teléfono válido (mínimo 8 dígitos)"
     },
     "footer": {
-        "rights": "La Rosée Beauté ©"
+        "rights": "Beauty Room BY SHAY ©"
     },
     "calendar": {
         "title": "Selecciona Fecha y Hora",
