feat: update brand name to Shay Beauty Clinic & update WhatsApp reminder message

--- a/locales/en.json
+++ b/locales/en.json
@@ -49,7 +49,7 @@
         "error_phone": "Please enter a valid phone number (min. 8 digits)"
     },
     "footer": {
-        "rights": "La Rosée Beauté ©"
+        "rights": "Beauty Room by Shay ©"
     },
     "calendar": {
         "title": "Select Date & Time",
